--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "crypto": "^1.0.1",
     "fastify": "^3.20.2",
     "fastify-autoload": "^3.8.0",
     "fastify-cli": "^2.13.0",
