--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test",
+  "name": "fastify-elu-scaler",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "tap \"test/**/*.test.js\"",
     "start": "fastify start -l info -a 0.0.0.0 -p 3000 app.js",
-    "dev": "fastify start -w -l info -P app.js"
+    "dev": "fastify start -w --ignore-watch .next -l info -P app.js"
   },
   "keywords": [],
   "author": "",
@@ -19,9 +19,13 @@
     "fastify": "^3.20.2",
     "fastify-autoload": "^3.8.0",
     "fastify-cli": "^2.13.0",
+    "fastify-nextjs": "^6.0.0",
     "fastify-plugin": "^3.0.0",
     "fastify-sensible": "^3.1.1",
+    "next": "^11.0.0",
     "prom-client": "^13.2.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "under-pressure": "^5.7.0"
   },
   "devDependencies": {
