--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -17,6 +17,8 @@ spec:
       creationTimestamp: null
       labels:
         app: elu
+      annotations:
+        linkerd.io/inject: enabled
     spec:
       containers:
       - image: elu:latest
@@ -27,8 +29,8 @@ spec:
         resources:
           requests:
             memory: "50Mi"
-            cpu: "250m"
+            cpu: "1000m"
           limits:
             memory: "350Mi"
-            cpu: "1000m"
+            cpu: "4000m"
 status: {}
